manifests/game-2048/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-2048
  namespace: game-2048
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: game.172-189-159-185.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: game-2048
            port:
              number: 80
